download then use

--- a/step1.ipynb
+++ b/step1.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(base_frame.pose_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-12-24 19:56:43,176 [<ipython-input-7-d24fee445b8d>:<module>:2] Initial fit\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get betas from 5 frames\n",
+    "log.info('Initial fit')\n",
+    "\n",
+    "num_init = 5\n",
+    "indices_init = np.ceil(np.arange(num_init) * num_frames * 1. / num_init).astype(np.int)\n",
+    "\n",
+    "init_frames = [base_frame]\n",
+    "for i in indices_init[1:]:\n",
+    "    init_frames.append(create_frame(i, base_smpl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -391,12 +425,18 @@
       " [ -40.72825932 -219.51790077]\n",
       " [ -29.37081378 -215.19962711]\n",
       " [ -46.68374855 -198.6219922 ]\n",
-      " [ -28.82030465 -230.47712397]]\n"
+      " [ -28.82030465 -230.47712397]]\n",
+      "[[ -37.01165423 -223.35057181]\n",
+      " [ -64.04232201 -159.53792041]\n",
+      " [ -14.64364306 -159.90694275]\n",
+      " [ -36.66026371  -53.05932856]\n",
+      " [ -14.37306846  -60.05237632]]\n"
      ]
     }
    ],
    "source": [
-    "print(base_frame.pose_obj)"
+    "print(init_frames[0].pose_obj)\n",
+    "print(init_frames[0].pose_obj[[0, 2, 5, 8, 11]])\n"
    ]
   },
   {
@@ -447,15 +487,7 @@
     }
    ],
    "source": [
-    "# get betas from 5 frames\n",
-    "log.info('Initial fit')\n",
     "\n",
-    "num_init = 5\n",
-    "indices_init = np.ceil(np.arange(num_init) * num_frames * 1. / num_init).astype(np.int)\n",
-    "\n",
-    "init_frames = [base_frame]\n",
-    "for i in indices_init[1:]:\n",
-    "    init_frames.append(create_frame(i, base_smpl))\n",
     "\n",
     "init(init_frames, body_height, b2m, debug_rn)"
    ]
@@ -538,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
